--- a/applications/lxqt-kcmshell5-kwinsettings.desktop
+++ b/applications/lxqt-kcmshell5-kwinsettings.desktop
@@ -1,12 +1,14 @@
 [Desktop Entry]
 Version=1.0
-Name=LXQt KWin Settings
+Name=KWin Settings
+Name[it]=Impostazioni KWin
 Comment=Decoration, Actions, Focus, Moving, Rules, Composing and others
+Comment[it]=Decorazione, azioni, fuoco, regole, effetti desktop e altro
 TryExec=kwin_x11
 Exec=kcmshell5 --caption "LXQt KWin Settings" --desktopfile=/usr/share/kservices5/kwindecoration.desktop kcm_kwin_effects kwinactions kwinadvanced kwincompositing kwindecoration kwinfocus kwinmoving kwinoptions kwinrules  kwinscreenedges kwinscripts kwintabbox kwintouchscreen
 Icon=kwin
 Terminal=false
 Type=Application
-Categories=LXQt;Qt;Settings;System;
+Categories=Qt;Settings;Desktopsettings;System;
 StartupNotify=true
 OnlyShowIn=LXQt;
